--- a/src/2022/day19.lisp.4
+++ b/src/2022/day19.lisp.4
@@ -5,7 +5,7 @@
   id ore clay obsidian geode)
 
 (defun parse-blueprint (string)
-  (bnd1 (nums (mapcar #'parse-integer (cl-ppcre:all-matches-as-strings "\\d+" string)))
+  (bnd1 (nums (extract-positive-integers string))
     (make-blueprint :id (elt nums 0)
                     :ore (subseq nums 1 2)
                     :clay (subseq nums 2 3)
