--- a/src/2022/day19.lisp.1
+++ b/src/2022/day19.lisp.1
@@ -56,7 +56,7 @@
 (defun build-robots (resources costs)
   (labels ((recur (remaining costs resources)
              (cond ((null costs) (list (list nil resources)))
-                   (t (bnd1 (cost-input (caar costs))
+                   (t (bnd1 cost-input (caar costs)
                         (loop for n from 0 upto (min (potential-robots resources cost-input) remaining)
                               append (loop for (robots-built resources-left) in (recur (- remaining n)
                                                                                (cdr costs)
@@ -91,13 +91,13 @@
   (let ((already-seen (make-hash-table :test 'equalp))
         (best 0))
     (labels ((recur (remaining state)
-               (bnd1 (existing (gethash state already-seen))
+               (bnd1 existing (gethash state already-seen)
                  (when (or (not existing) (> remaining existing))
                    #+#:excluded (when (>= (hash-table-count already-seen) 2000000)
                                   (clrhash already-seen))
                    (setf (gethash state already-seen) remaining)
                    (if (zerop remaining)
-                     (maxf best (car (last (resources state))))
+                     (maxf best (last-elt (resources state)))
                      (loop for (robots-built resources-left) in (build-robots (resources state)
                                                                               (costs blueprint))
                            for resources-next = (collect-resources resources-left (robots state))
